@@ -1,5 +1,9 @@
 [text]
-
-aimeosDecoratorsInfo = "Aimeos decorators pass on their function calls to the original class. This is a list of all callable methods of these classes."
+aimeosDecoratorsInfo = "Aimeos decorators pass on their function calls that they can not handle themselves to the original class. This is a list of all callable methods of these classes."
 aimeosViewInfo = "Known Aimeos viewhelpers. There may be others, from other extensions. Sadly we can not scan for those."
 aimeosViewExisting = "Already instantiated vew helpers. See Aimeos view factory for more details."
+
+[de]
+aimeosDecoratorsInfo = "Aimeos Dekoratoren leiten alle Funktionsaufrufe die sie nicht selber abhandeln an die Originalklasse weiter. Das hier ist eine Auflistung der Public Methoden dieser Klasse(n).
+aimeosViewInfo = "Bekannte Aimeos Viewhelper. Extensions können eigene definieren, diese werden hier aber nicht aufgelistet."
+aimeosViewExisting = "Bereits instanziierte Viewhelper. Mehr details dazu gibt es in der Aimeos View Factory."
