@@ -2,9 +2,20 @@
 _getProperties = "TYPO3 debug function.<br />It takes the properties directly from the model, ignoring the getter function.<br />If the getter method is used to compute this value, the values from this function may be inaccurate."
 queryBuilderHelp = "SQL debug output"
 
-loglevelT3FileWriter = "Log level for the TYPO3 file logging."
+loglevelT3FileWriter = "Log level for the TYPO3 filewriter logger."
 loglevelT3FileWriterHelp = "Depending on the level, there may be a lot entries in there."
-activateT3FileWriter = "Activate TYPO3 file logging:"
+activateT3FileWriter = "Activate the TYPO3 logging:"
 activateT3FileWriterHelp = "Shall kreXX activate it's TYPO3 log file writer?"
 configErrorLoglevelT3FileWriter = "Wrong configuration for: 'TYPO3 => activateT3FileWriter'! '%s' is not a valid logging level. The configured setting was not applied!"
 TYPO3Readable = "TYPO3 specific"
+
+[de]
+_getProperties = "TYPO3 spezifische Debug Methode.<br />Die Werte der Properties werden direkt aus dem Model geholt, ohne die Getter zu nutzen.<br />Fall die Getter benutzt werden, kann es passieren, dass der Property Wert neu bestimmt wird."
+queryBuilderHelp = "SQL Debug Ausgabe"
+
+loglevelT3FileWriter = "Log Level für den TYPO3 Filewriter Logger:"
+loglevelT3FileWriterHelp = "Je nach Log Level kann es sehr viele Einträge geben."
+activateT3FileWriter = "Activate den TYPO3 Filewriter Logger:"
+activateT3FileWriterHelp = "Soll kreXX seinen TYPO3 Filewriter Logger einschalten?"
+configErrorLoglevelT3FileWriter = "Falsche Konfiguration für: 'TYPO3 => activateT3FileWriter'! '%s' ist kein richtiges Loglevel. Dieses Setting wurde nicht angewendet!"
+TYPO3Readable = "TYPO3 spezifisches"
