@@ -65,7 +65,6 @@
     <f:render section="dropdown" arguments="{config: config.skin, options: dropdown.skins}" />
     <f:render section="dropdown" arguments="{config: config.destination, options: dropdown.destination}" />
     <f:render section="input"    arguments="{config: config.maxfiles}" />
-    <f:render section="dropdown" arguments="{config: config.useScopeAnalysis, options: dropdown.bool}" />
     <f:render section="dropdown" arguments="{config: config.languageKey, options: dropdown.languages}" />
 </f:section>
 <f:section name="pruneOutput">
