@@ -37,7 +37,6 @@
     <f:render section="dropdown" arguments="{formConfig.skin}" />
     <f:render section="noedit"   arguments="{formConfig.destination}" />
     <f:render section="noedit"   arguments="{formConfig.maxfiles}" />
-    <f:render section="dropdown" arguments="{formConfig.useScopeAnalysis}" />
 </f:section>
 <f:section name="pruneOutput">
     <f:render section="dropdown" arguments="{formConfig.maxStepNumber}" />
