@@ -37,13 +37,6 @@ destination = "browserImmediately"
 ; Files will only get deleted, when he creates a new one.
 maxfiles = "10"
 
-; When you are using the scope analysis, kreXX will analyse everything that can
-; be reached from the point where kreXX was callen in the code. When coming from
-; the $this environment, all protected and most private values / methods are
-; reachable, and kreXX will take this into account.
-useScopeAnalysis = "true"
-; useScopeAnalysis = "false"
-
 ; ------------------------------------------------------------------------------
 [prune]
 
@@ -142,7 +135,6 @@ memoryLeft = "64"
 disabled = "full"
 detectAjax = "full"
 skin = "full"
-useScopeAnalysis = "full"
 maxStepNumber = "full"
 arrayCountLimit = "full"
 level = "full"
