@@ -8,7 +8,6 @@
         "skin": "smokygrey",
         "destination": "browser",
         "maxfiles": "10",
-        "useScopeAnalysis": true
     },
     "prune": {
         "maxStepNumber": "10",
@@ -36,7 +35,6 @@
         "disabled": "full",
         "detectAjax": "full",
         "skin": "full",
-        "useScopeAnalysis": "full",
         "maxStepNumber": "full",
         "arrayCountLimit": "full",
         "level": "full",
