@@ -42,6 +42,7 @@ use Brainworxx\Krexx\Analyse\Callback\Iterate\ThroughArray;
 use Brainworxx\Krexx\Analyse\Callback\Iterate\ThroughLargeArray;
 use Brainworxx\Krexx\Analyse\Model;
 use Brainworxx\Krexx\Service\Config\ConfigConstInterface;
+use Brainworxx\Krexx\Service\Factory\Pool;
 
 /**
  * Processing of arrays.
@@ -51,6 +52,25 @@ class ProcessArray extends AbstractProcessNoneScalar implements
     CallbackConstInterface,
     ConfigConstInterface
 {
+    /**
+     * Cached setting for the array count limit before switching to the
+     * simpified version.
+     *
+     * @var int
+     */
+    protected $arrayCountLimit = 0;
+
+    /**
+     * {@inheritDoc}
+     */
+    public function __construct(Pool $pool)
+    {
+        parent::__construct($pool);
+
+        $this->arrayCountLimit = (int) $this->pool->config
+            ->getSetting(static::SETTING_ARRAY_COUNT_LIMIT);
+    }
+
     /**
      * Is this one an array?
      *
@@ -79,7 +99,7 @@ class ProcessArray extends AbstractProcessNoneScalar implements
         $this->pool->emergencyHandler->upOneNestingLevel();
         $count = count($model->getData());
 
-        if ($count > (int) $this->pool->config->getSetting(static::SETTING_ARRAY_COUNT_LIMIT)) {
+        if ($count > $this->arrayCountLimit) {
             // Budget array analysis.
             $model->injectCallback($this->pool->createClass(ThroughLargeArray::class))
                 ->setHelpid('simpleArray');
