@@ -15,6 +15,10 @@
   callback.
 - Change: Remove the inherited constants from the kreXX
   main class.
+- Change: String and array analysis now cache their settings.
+- Change: The ScalarString class gets instantiated only once
+  per run.
+- Change: Removed the scope analysis setting.
 
 4.1.3
 - Added microtime analysis to the float routing.
